--- a/index.html
+++ b/index.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>bookmarklets</title>
-</head>
-<body>
-	<h1>bookmarklets</h1>
-	<ul>
-		<li>
-			<a href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://craftoid.github.io/bookmarklets/amazon-search.js'); document.body.appendChild(jsCode); }());">amazon search</a> 
-		</li>
-		<li>
-			<a href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://craftoid.github.io/bookmarklets/p5js-help.js'); document.body.appendChild(jsCode); }());">p5.js help</a>
-		</li>
-	</ul>
-</body>
+
+	<head>
+
+		<title>bookmarklets</title>
+
+   		<style> 
+			@import url('https://fonts.googleapis.com/css?family=Noto-Sans');
+   			body {
+   				margin: 0;
+   				padding: 0;
+   				background: #ddd;
+   				font-family: 'Noto Sans' 
+   			}
+   			#content {
+   				width: 600px; 
+   				height: 100vh;
+   				margin: auto;
+   				padding: 40px;
+   				background: #fff;
+   				border-left: solid;
+   				border-right: solid;
+  			}
+  			a {
+  				text-decoration: none;
+  			}
+   		</style>
+
+	</head>
+
+	<body>
+
+		<div id="content">
+
+			<h1>bookmarklets</h1>
+
+			<p>
+			Here is a small list of bookmarklets. <br>
+			Drag the link to your bookmark bar to install them.
+			</p>
+
+			<ul>
+				<li>
+					<a href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://craftoid.github.io/bookmarklets/amazon-search.js'); document.body.appendChild(jsCode); }());">amazon search</a> 
+				</li>
+				<li>
+					<a href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://craftoid.github.io/bookmarklets/p5js-help.js'); document.body.appendChild(jsCode); }());">p5.js help</a>
+				</li>
+			</ul>
+
+			<p>
+				The source code can be found <a href="https://github.com/craftoid/bookmarklets">here</a>.
+			</p>
+
+		</div>
+
+	</body>
+
 </html>
